--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <header>
     <h1>Zaish</h1>
-    <p class="tagline">Adobe-Certified Video Editor | 4+ Years of Storytelling</p>
+    <p class="tagline">Adobe-Certified Video Editor | 4+ Years of Experience</p>
     <nav>
       <a href="#reel">Reel</a>
       <a href="#projects">Projects</a>
@@ -92,16 +92,15 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Hey, I'm Zaish — a video editor with over 4 years of experience using Adobe Premiere Pro and After Effects. I specialize in fast-paced, story-driven content and love bringing emotion and energy to every cut. Certified by Adobe, driven by passion.</p>
+    <p>Hey, I'm Zaish — a video editor with over 4 years of experience using Adobe Premiere Pro and After Effects. I specialize in high quality sleek videos that appeal to the eyes. Certified by Adobe, driven by passion.</p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
     <p>Want to work together? Reach out:</p>
     <ul>
-      <li>Email: your.email@example.com</li>
-      <li>Instagram: <a href="https://instagram.com/yourhandle" target="_blank">@yourhandle</a></li>
-      <li>GitHub: <a href="https://github.com/yourprofile" target="_blank">github.com/yourprofile</a></li>
+      <li>Email: zaish@cargman.com</li>
+      <li>Instagram: <a href="https://instagram.com/kurroppoi" target="_blank">@kuroppoi</a></li>
     </ul>
   </section>
 
