--- a/index.html
+++ b/index.html
@@ -61,15 +61,14 @@
     <h1>Zaish</h1>
     <p class="tagline">Adobe-Certified Video Editor | 4+ Years of Experience</p>
     <nav>
-      <a href="#reel">Reel</a>
-      <a href="#projects">Projects</a>
+      <a href="#reel">Projects</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <section id="reel">
-    <h2>My Reel</h2>
+    <h2>Projects</h2>
     <div class="video-grid">
       <iframe 
         src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
@@ -79,7 +78,7 @@
     </div>
   </section>
 
-  <section id="projects">
+  <section id="projects continued...">
     <h2>Selected Projects</h2>
     <div class="video-grid">
       <iframe 
