--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h2>Projects</h2>
     <div class="video-grid">
       <iframe 
-        src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
-        title="Project 1: Video Editing Example"
+        src="https://drive.google.com/file/d/1StI4Ql8_KMV82LQo3osfThFazxdVfshn/preview" 
+        title="Interview"
         allow="autoplay" 
         allowfullscreen>
       </iframe>
@@ -35,7 +35,7 @@
     <h2>Selected Projects</h2>
     <div class="video-grid">
       <iframe 
-        src="https://drive.google.com/file/d/1StI4Ql8_KMV82LQo3osfThFazxdVfshn/preview" 
+        src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
         title="Project 2: Creative Video"
         allow="autoplay" 
         allowfullscreen>
@@ -49,21 +49,20 @@
     </div>
   </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hey, I'm Zaish — a video editor with over 4 years of experience using Adobe Premiere Pro and After Effects. I specialize in high quality sleek videos that appeal to the eyes. Certified by Adobe, driven by passion. You can check out some of my previous work on <a href="https://www.youtube.com/@DonnaLorenNow/videos" target="_blank">YouTube</a>.</p>
+  <section id="my-image">
+    <h2>Interview Types</h2>
+    <img src="https://drive.google.com/uc?export=view&id=1XuymLHdq43i_d5imsMC5B_-Oyk7vte10" alt="A screenshot of a class project I worked on" />
   </section>
 
   <section id="essay">
-    <h2>My Essay: The Future of Video Editing</h2>
-    <p>Video editing has evolved significantly over the last few years. In this essay, I explore the technologies that are shaping the future of video editing. With advancements in AI, real-time rendering, and automated editing tools, the editing process is becoming faster, more intuitive, and accessible to a wider range of creators.</p>
-    <p>As AI continues to improve, video editors will be able to automate repetitive tasks, leaving more time for creativity. However, the human touch remains indispensable in areas like storytelling and emotion-driven editing. This balance between technology and artistry will define the future of video editing.</p>
-    <p>Ultimately, the future is bright, with new tools and technologies pushing the boundaries of what we can create. The possibilities for creativity and innovation are limitless.</p>
+    <h2>Essay</h2>
+    <p>In this essay, I discuss the different types of interviews and how they are used...</p>
+    <iframe src="https://drive.google.com/file/d/1GhXECN8JOWKsaPxC5h-fLw44ECWVvGnE/preview" width="100%" height="600px"></iframe>
   </section>
 
-  <section id="my-image">
-    <h2>My Artwork</h2>
-    <img src="path-to-your-image.jpg" alt="A screenshot of a class project I worked on" />
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Hey, I'm Zaish — a video editor with over 4 years of experience using Adobe Premiere Pro and After Effects. I specialize in high quality sleek videos that appeal to the eyes. Certified by Adobe, driven by passion. You can check out some of my previous work on <a href="https://www.youtube.com/@DonnaLorenNow/videos" target="_blank">YouTube</a>.</p>
   </section>
 
   <section id="contact">
