--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p class="tagline">Adobe-Certified Video Editor | 4+ Years of Experience</p>
     <nav>
       <a href="#reel">Projects</a>
+      <a href="#my-image">Artwork</a>
+      <a href="#essay">Essay</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
-      <a href="#essay">Essay</a>
-      <a href="#my-image">Artwork</a>
     </nav>
   </header>
 
@@ -54,8 +54,9 @@
     <img src="https://drive.google.com/uc?export=view&id=1XuymLHdq43i_d5imsMC5B_-Oyk7vte10" alt="A screenshot of a class project I worked on" />
   </section>
 
+
   <section id="essay">
-    <h2>Essay</h2>
+    <h2>Interview Types and their Presence in the World</h2>
     <p>In this essay, I discuss the different types of interviews and how they are used...</p>
     <iframe src="https://drive.google.com/file/d/1GhXECN8JOWKsaPxC5h-fLw44ECWVvGnE/preview" width="100%" height="600px"></iframe>
   </section>
