--- a/home.html
+++ b/home.html
@@ -9,23 +9,23 @@
 <body>
   <nav>
     <a href="home.html">Home</a>
-    <a href="climate_change.html">Climate Change</a>
-    <a href="disaster_relief.html">Disaster Relief</a>
-    <a href="food_deserts.html">Food Deserts</a>
-    <a href="enviromental_injustice.html">Enviromental Injustice</a>
-    <a href="green_space.html">Green Space</a>
-    <a href="sources.html">Sources</a>
+    <a href="module1.html">Module 1</a>
+    <a href="module2.html">Module 2</a>
+    <a href="module3.html">Module 3</a>
+    <a href="module4.html">Module 4</a>
+    <a href="module5.html">Module 5</a>
+    <a href="coursereflection.html">Course Reflection</a>
   </nav>
 
   <main>
     <h1>Environmental Impacts on Society</h1>
     <p>Welcome to our group project! Each member researched how environmental factors impact different social issues.</p>
     <ul>
-      <a href="climate_change.html" class="link-box">Climate Change Impacts: Who Pays the Price?</a>
-      <a href="disaster_relief.html" class="link-box">Inequities in Disaster Relief: Who Gets Left Behind?</a>
-      <a href="food_deserts.html" class="link-box">Impacts of Food Deserts: Who do they Affect?</a>
-      <a href="essay4.html" class="link-box">Environmental Injustice: Who Was at Risk?</a>
-      <a href="essay5.html" class="link-box">Green Space Distribution</a>
+      <a href="module1.html" class="link-box">Module 1</a>
+      <a href="module2.html.html" class="link-box">Module 2</a>
+      <a href="module3.html" class="link-box">Module 3</a>
+      <a href="module4.html" class="link-box">Module 4</a>
+      <a href="module5.html" class="link-box">Module 5</a>
     </ul>
   </main>
 
