--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 
   <main>
     <h1>Environmental Impacts on Society</h1>
-    <p>Welcome to our group project! Each member researched how environmental factors impact different social issues.</p>
+    <p>Adobe-Certified Video Editor | 4+ Years of Experience</p>
     <ul>
       <a href="module1.html" class="link-box">Module 1</a>
       <a href="module2.html.html" class="link-box">Module 2</a>
