--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   </nav>
 
   <main>
-    <h1>Environmental Impacts on Society</h1>
+    <h1>Zaish | Video Editor</h1>
     <p>Adobe-Certified Video Editor | 4+ Years of Experience</p>
     <ul>
       <a href="module1.html" class="link-box">Module 1</a>
