--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <h1>Zaish</h1>
     <p class="tagline">Adobe-Certified Video Editor | 4+ Years of Experience</p>
     <nav>
-      <a href="#reel">Projects</a>
-      <a href="#my-image">Artwork</a>
-      <a href="#essay">Essay</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
+    <a href="home.html">Home</a>
+    <a href="module1.html">Module 1</a>
+    <a href="module2.html">Module 2</a>
+    <a href="module3.html">Module 3</a>
+    <a href="module4.html">Module 4</a>
+    <a href="module5.html">Module 5</a>
+    <a href="coursereflection.html">Course Reflection</a>
     </nav>
   </header>
 
