--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio Home</title>
+  <title>Environmental Impacts on Society</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -17,36 +17,17 @@
     <a href="coursereflection.html">Course Reflection</a>
   </nav>
 
- <main>
-  <section id="reel">
-    <h1>Projects</h1>
-    <div class="video-grid">
-      <!-- Updated video iframe source -->
-      <iframe 
-        src="https://drive.google.com/file/d/1etOExN6XE9rxG-KDXXNOlhKPmGaNFqtP/preview" 
-        title="Reflection Video"
-        allow="autoplay" 
-        allowfullscreen>
-      </iframe>
-    </div>
-  </section>
-
-  <section id="reflection">
-    <h2>Course Reflection</h2>
-    <!-- Textarea for writing reflection -->
-    <form action="submit_reflection.php" method="POST">
-      <label for="reflectionText">Write your reflection here:</label>
-      <textarea 
-        id="reflectionText" 
-        name="reflectionText" 
-        rows="10" 
-        cols="50" 
-        placeholder="Share your thoughts about the project, what you've learned, etc."></textarea><br><br>
-      <button type="submit">Submit Reflection</button>
-    </form>
-  </section>
-
-</main>
+  <main>
+    <h1>Environmental Impacts on Society</h1>
+    <p>Research on how environmental factors impact different social issues.</p>
+    <ul>
+      <a href="module1.html" class="link-box">Module 1</a>
+      <a href="module2.html" class="link-box">Module 2</a>
+      <a href="module3.html" class="link-box">Module 3</a>
+      <a href="module4.html" class="link-box">Module 4</a>
+      <a href="module5.html" class="link-box">Module 5</a>
+    </ul>
+  </main>
 
   <div class="circles"></div>
 
