--- a/coursereflection.html
+++ b/coursereflection.html
@@ -11,12 +11,12 @@
 
   <nav>
     <a href="home.html">Home</a>
-    <a href="climate_change.html">Climate Change</a>
-    <a href="disaster_relief.html">Disaster Relief</a>
-    <a href="food_deserts.html">Food Deserts</a>
-    <a href="enviromental_injustice.html">Enviromental Injustice</a>
-    <a href="green_space.html">Green Space</a>
-    <a href="sources.html">Sources</a>
+    <a href="module1.html">Module 1</a>
+    <a href="module2.html">Module 2</a>
+    <a href="module3.html">Module 3</a>
+    <a href="module4.html">Module 4</a>
+    <a href="module5.html">Module 5</a>
+    <a href="coursereflection.html">Course Reflection</a>
   </nav>
 
  <main>
