--- a/module1.html
+++ b/module1.html
@@ -31,6 +31,7 @@
       </iframe>
     </div>
   </section>
+   <h3>Throughout Module 1 I practiced clean design skills and learned advanced audio editing techniques.</h3>
 </main>
 
   <div class="circles"></div>
