--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Environmental Impacts on Society</title>
+  <title>Adobe Video 2 Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -18,8 +18,8 @@
   </nav>
 
   <main>
-    <h1>Environmental Impacts on Society</h1>
-    <p>Research on how environmental factors impact different social issues.</p>
+    <h1>Adobe Video Design II Class</h1>
+    <p>Zaish 5/15/25</p>
     <ul>
       <a href="module1.html" class="link-box">Module 1</a>
       <a href="module2.html" class="link-box">Module 2</a>
