--- a/module2.html
+++ b/module2.html
@@ -19,38 +19,12 @@
 
   <main>
     <h1>Inequities in Disaster Relief: Who Gets Left Behind?</h1>
-  <h2>Why This Matters</h2>
-  <p>
-    When disasters hit, everyone should get help. But in the U.S., the support people receive after a hurricane or flood often depends more on their zip code than their actual need. That means lower-income communities, often made up of minorities, get less help, even if they’re hit the hardest.
-  </p>
-
-  <h2>The Problem: Unequal Aid After Disasters</h2>
-  <ul>
-    <li>FEMA, the agency that gives out disaster aid, mostly bases help on property value and location.</li>
-    <li>That sounds fair, until you realize lower-income neighborhoods often have lower home values due to years of housing discrimination.</li>
-    <li>After Hurricane Katrina, Black families received $8,000 less in aid on average than White families.</li>
-    <li>Wealthier neighborhoods bounced back quickly, some people even gained wealth. Poorer families were left with unsafe housing or homelessness.</li>
-  </ul>
-
-  <h2>What We Can Do: Build Community Support</h2>
-  <p>One solution that’s already working: Resilience Hubs.</p>
-  <ul>
-    <li>-They provide power, food, shelter, and support</li>
-    <li>-Focus on the areas hit hardest</li>
-    <li>-Help everyone, no matter how much their home is worth</li>
-  </ul>
-
-  <h2>Why It Works</h2>
-  <ul>
-    <li>Resilience Hubs are designed for people, not property.</li>
-    <li>They fill the gaps left by FEMA and make sure help reaches those who need it most.</li>
-    <li>Cities using this model are seeing stronger, faster recoveries, especially in vulnerable neighborhoods.</li>
-  </ul>
-
-  <h2>Final Thoughts</h2>
-  <p>
-    Disasters don’t care how much your house is worth, but FEMA’s help does. To create change, we need to support local solutions like Resilience Hubs and demand that FEMA reform its policies so that poorer communities get the help they need. Everyone deserves a chance to recover, no matter their zip code.
-  </p>
+      <iframe 
+        src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
+        title="Project 2: Creative Video"
+        allow="autoplay" 
+        allowfullscreen>
+      </iframe>
 </main>
 
   <div class="circles"></div>
