--- a/module2.html
+++ b/module2.html
@@ -19,13 +19,17 @@
 
   <main>
     <h1>Inequities in Disaster Relief: Who Gets Left Behind?</h1>
-      <iframe 
-        src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
-        title="Project 2: Creative Video"
-        allow="autoplay" 
-        allowfullscreen>
-      </iframe>
-</main>
+    <iframe 
+      src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
+      title="Project 2: Creative Video"
+      allow="autoplay" 
+      allowfullscreen>
+    </iframe>
+
+    <h3>
+      Adobe Video 2 has been one of the most fun and rewarding units for me. I got to be creative with editing techniques and improve my storytelling through video. It really pushed my skills and made me enjoy the process even more.
+    </h3>
+  </main>
 
   <div class="circles"></div>
 
@@ -50,3 +54,4 @@
   </script>
 </body>
 </html>
+
