--- a/module1.html
+++ b/module1.html
@@ -29,7 +29,7 @@
       </iframe>
     </div>
   </section>
-   <h3>Throughout Module 1 I practiced clean design skills and learned advanced audio editing techniques.</h3>
+   <h3>Throughout Module 1 I practiced clean design skills and learned advanced audio editing techniques. This became extremely useful in later modules as we started editing interviews.</h3>
 </main>
 
   <div class="circles"></div>
