--- a/module2.html
+++ b/module2.html
@@ -27,7 +27,7 @@
     </iframe>
 
     <h3>
-      Adobe Video 2 has been one of the most fun and rewarding units for me. I got to be creative with editing techniques and improve my storytelling through video. It really pushed my skills and made me enjoy the process even more.
+      This module started us with basic interview design. How to edit interviews, host them, and the different types.
     </h3>
   </main>
 
