--- a/module3.html
+++ b/module3.html
@@ -26,6 +26,9 @@
         allow="autoplay" 
         allowfullscreen>
       </iframe>
+        <h3> 
+        Module 3 we experimented with actually shooting, hosting, and editing our own interviews. 
+        </h3>
 </main>
 
 
