--- a/module3.html
+++ b/module3.html
@@ -17,19 +17,19 @@
     <a href="coursereflection.html">Course Reflection</a>
   </nav>
 
-<main>
-  <h1>Module 3 Project<h1>
-      <div class="video-grid">
-      <iframe 
-        src="https://drive.google.com/file/d/1StI4Ql8_KMV82LQo3osfThFazxdVfshn/preview" 
-        title="Interview"
-        allow="autoplay" 
-        allowfullscreen>
-      </iframe>
-        <h3> 
-        Module 3 we experimented with actually shooting, hosting, and editing our own interviews. 
-        </h3>
-</main>
+  <main>
+    <h1>Module 3 Overview</h1>
+    <iframe 
+      src="https://drive.google.com/file/d/1StI4Ql8_KMV82LQo3osfThFazxdVfshn/preview" 
+      title="Project 2: Creative Video"
+      allow="autoplay" 
+      allowfullscreen>
+    </iframe>
+
+    <h3>
+      Module 3 we experimented with actually shooting, hosting, and editing our own interviews.
+    </h3>
+  </main>
 
 
   <div class="circles"></div>
