--- a/module4.html
+++ b/module4.html
@@ -18,7 +18,12 @@
   </nav>
   <main>
     <h1>Environmental Injustice: Who Was at Risk?</h1>
-
+  <h3> 
+  Module four mostly consisted of types of social media content, technical writing for social media posting, and techniques for editing social media videos. Along with deep dives into dopics like our thoughts on salaries offered for writers. And how these salaries compare to other fields.
+  </h3>
+    <h3>
+      Technical writing requires you to be adaptive to situations and research the topic you are writing about. Technical writing for social media requires a combination of clarity, brevity, and technical expertise. Writers simplify complex information while engaging the audience, maintaining a consistent tone, and ensuring accuracy. And If I were considering writing for a living, I would write creative fiction because it allows for creativity and autonomy. Writer salaries vary greatly depending on the type of work you do and how much work your willing to put in. If you want to make good money as a writer it's almost solely up to the person, the more time you put in and projects you take the more you make. And compared to other fields you make pretty decent money, nothing at a doctor or lawyer salary but decent money.
+    </h3>
   </main>
 
   <div class="circles"></div>
