--- a/module1.html
+++ b/module1.html
@@ -17,7 +17,7 @@
     <a href="coursereflection.html">Course Reflection</a>
   </nav>
  <main>
-  <h1>Module 1 Project</h1>
+  <h1>Module 1 Overview</h1>
   <section id="reel">
     <div class="video-grid">
       <!-- Updated video iframe source -->
