--- a/module2.html
+++ b/module2.html
@@ -18,7 +18,7 @@
   </nav>
 
   <main>
-    <h1>Inequities in Disaster Relief: Who Gets Left Behind?</h1>
+    <h1>Module 2 Overview</h1>
     <iframe 
       src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
       title="Project 2: Creative Video"
