--- a/module4.html
+++ b/module4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Essay 1 – FEMA and Inequality</title>
+  <title>Module 4</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -17,7 +17,7 @@
     <a href="coursereflection.html">Course Reflection</a>
   </nav>
   <main>
-    <h1>Environmental Injustice: Who Was at Risk?</h1>
+    <h1>Module 4 Overview</h1>
   <h3> 
   Module four mostly consisted of types of social media content, technical writing for social media posting, and techniques for editing social media videos. Along with deep dives into dopics like our thoughts on salaries offered for writers. And how these salaries compare to other fields.
   </h3>
