--- a/module5.html
+++ b/module5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Essay 1 – FEMA and Inequality</title>
+  <title>Module 5</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -19,7 +19,7 @@
 
   <main>
     <div>
-      <h1>Module 5</h1>
+      <h1>Module 5 Overview</h1>
     <!-- Slideshow Embed Section -->
     <section id="reel2">
       <div class="video-grid">
