--- a/coursereflection.html
+++ b/coursereflection.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sources</title>
+  <title>Course Reflection</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
