--- a/module2.html
+++ b/module2.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <video autoplay muted loop id="bg-video">
+    <source src="Fire_Rain_Particles_Looping_Background.mp4" type="video/mp4">
+  </video>
+
   <nav>
     <a href="home.html">Home</a>
     <a href="module1.html">Module 1</a>
@@ -19,12 +23,14 @@
 
   <main>
     <h1>Module 2 Overview</h1>
-    <iframe 
-      src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
-      title="Project 2: Creative Video"
-      allow="autoplay" 
-      allowfullscreen>
-    </iframe>
+    <div class="video-grid">
+      <iframe 
+        src="https://drive.google.com/file/d/1Bbw6wgRz8LcUK3CkpHQ-Viv_Jj-mtlNU/preview" 
+        title="Project 2: Creative Video"
+        allow="autoplay" 
+        allowfullscreen>
+      </iframe>
+    </div>
 
     <h3>
       This module started us with basic interview design. How to edit interviews, host them, and the different types.
@@ -54,4 +60,3 @@
   </script>
 </body>
 </html>
-
