--- a/module3.html
+++ b/module3.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <video autoplay muted loop id="bg-video">
+    <source src="Fire_Rain_Particles_Looping_Background.mp4" type="video/mp4">
+  </video>
+
   <nav>
     <a href="home.html">Home</a>
     <a href="module1.html">Module 1</a>
@@ -19,18 +23,19 @@
 
   <main>
     <h1>Module 3 Overview</h1>
-    <iframe 
-      src="https://drive.google.com/file/d/1StI4Ql8_KMV82LQo3osfThFazxdVfshn/preview" 
-      title="Project 2: Creative Video"
-      allow="autoplay" 
-      allowfullscreen>
-    </iframe>
+    <div class="video-grid">
+      <iframe 
+        src="https://drive.google.com/file/d/1StI4Ql8_KMV82LQo3osfThFazxdVfshn/preview" 
+        title="Project 2: Creative Video"
+        allow="autoplay" 
+        allowfullscreen>
+      </iframe>
+    </div>
 
     <h3>
       Module 3 we experimented with actually shooting, hosting, and editing our own interviews.
     </h3>
   </main>
-
 
   <div class="circles"></div>
 
@@ -55,3 +60,4 @@
   </script>
 </body>
 </html>
+
