--- a/module5.html
+++ b/module5.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <video autoplay muted loop id="bg-video">
+    <source src="Fire_Rain_Particles_Looping_Background.mp4" type="video/mp4">
+  </video>
+
   <nav>
     <a href="home.html">Home</a>
     <a href="module1.html">Module 1</a>
@@ -18,17 +22,15 @@
   </nav>
 
   <main>
-    <div>
-      <h1>Module 5 Overview</h1>
-    <!-- Slideshow Embed Section -->
+    <h1>Module 5 Overview</h1>
     <section id="reel2">
       <div class="video-grid">
         <iframe src="https://drive.google.com/file/d/1WLausu69lhW-nTildhYLxZ6AcirOcbKS/preview" allow="autoplay" allowfullscreen></iframe>
       </div>
     </section>
-      <h3>
-        In Module five we brought together all the concepts and skills we learned to create a pitchdeck on an idea we had for a movie or tv show.
-      </h3>
+    <h3>
+      In Module five, we brought together all the concepts and skills we learned to create a pitch deck for a movie or TV show idea.
+    </h3>
   </main>
 
   <div class="circles"></div>
@@ -54,4 +56,5 @@
   </script>
 </body>
 </html>
+
 
