--- a/coursereflection.html
+++ b/coursereflection.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="circles"></div>
+  <video autoplay muted loop id="bg-video">
+    <source src="Fire_Rain_Particles_Looping_Background.mp4" type="video/mp4">
+  </video>
 
   <nav>
     <a href="home.html">Home</a>
@@ -19,13 +21,14 @@
     <a href="coursereflection.html">Course Reflection</a>
   </nav>
 
- <main>
-  <h1>Course Reflection</h1>
-   <h3>
-     I personally enjoyed this course but I do feel like it has some shortcomings. But those can obviously be brushed aside since it is a new class. THroughout this semester my knowledge of live tv and interviews has grown exponentially and I have a much better understanding of the video proccess. Not just the editing half but the whole proccess of lighting, cameras, setups, and scrips.
-   </h3>
-</main>
+  <main>
+    <h1>Course Reflection</h1>
+    <h3>
+      I personally enjoyed this course, though I feel it has a few shortcomings. However, those can easily be brushed aside since it’s a new class. Throughout this semester, my knowledge of live TV and interviews has grown exponentially. I now have a much better understanding of the video process — not just the editing side, but the full process of lighting, cameras, setups, and scripts.
+    </h3>
+  </main>
 
+  <div class="circles"></div>
 
   <script>
     const container = document.querySelector(".circles");
@@ -50,3 +53,4 @@
   </script>
 </body>
 </html>
+
